<resources>
    <string name="app_name">TouchAlert App</string>
    <string name="ads_are_about_to_be_shown" translatable="false">Ads are About to be Shown…</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="select">Select</string>
    <string name="flat_icon" translatable="false">flat icon</string>
    <string name="select_icon" translatable="false">Select Icon</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Start</string>
    <string name="onboarding_slide1_title">Don’t touch my phone</string>
    <string name="onboarding_slide2_title">Easy Wallpaper Makeover</string>
    <string name="onboarding_slide3_title">Unplug Alert</string>
    <string name="onboarding_slide4_title">Tap &amp; Prank</string>
    <string name="onboarding_slide1_desc">This alarm keeps your devices safe from unknown people and theft</string>
    <string name="onboarding_slide2_desc">Protect your device by enabling alerts when someone unplugs your phone</string>
    <string name="onboarding_slide3_desc">Quickly save and set wallpapers with just a tap.</string>
    <string name="onboarding_slide4_desc">Ready to prank your friends with hilarious sounds?</string>
    <string name="header_grant_permission">Grant Permission</string>
    <string name="body_grant_permission">Kindly authorize the notification permission to use don’t touch my phone</string>
    <string name="notify_permission">Notify Permission</string>
    <string name="continue_txt">Continue</string>
    <string name="action_settings">Settings</string>
    <string name="action_how_to_use">How it works?</string>
    <string name="tap_to_active">Tap to Active</string>
    <string name="tap_to_deactivate">Tap to Deactive</string>
    <string name="to_learn_how_to_use_this_app_please_the_guide_bellow">To learn how to use this app,\nplease read the guide bellow</string>
    <string name="info_txt_one">Tap to enable Touch Alert App don\'t touch feature.</string>
    <string name="info_txt_two">If your phone is moved or picked unexpectedly,\nthe "TouchAlert " app will detect it and start ringing.</string>
    <string name="info_txt_three">Customize flashlight, volume, and duration before activating the alarm</string>
    <string name="loading_ad" translatable="false">Loading Ad…</string>
    <string name="install" translatable="false">Install</string>
    <string name="play_pause" translatable="false">Play Pause</string>
    <string name="flash">Flash</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="volume">Volume</string>
    <string name="duration">Duration</string>
    <string name="apply_this_sound">Apply this sound</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="extension">Extension</string>
    <string name="light_up_the_screen_when_searching">Glow on exploration</string>
    <string name="flash_mode">Flash Mode</string>
    <string name="defaulttt">Default</string>
    <string name="disco_mode">Disco Mode</string>
    <string name="sos_mode">SOS Mode</string>
    <string name="vibration_mode">Vibration Mode</string>
    <string name="strong_vibration">Strong Vibration</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="ticktock">Ticktock</string>
    <string name="general">General</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tap_again_to_exit">Tap again to exit</string>
    <string name="police">Police</string>
    <string name="doorbell">Doorbell</string>
    <string name="hello">Hello</string>
    <string name="laughing">Laughing</string>
    <string name="sneeze">Sneeze</string>
    <string name="piano">Piano</string>
    <string name="rooster">Rooster</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="train">Train</string>
    <string name="whistle">Whistle</string>
    <string name="wind">Wind</string>
    <string name="guitar">Guitar</string>
    <string name="title" translatable="false">Title</string>
    <string name="https_appscentricapps_blogspot_com_2023_11_privacy_policy_html" translatable="false">https://appscentricapps.blogspot.com/2023/11/privacy-policy.html</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="gun">Gun</string>
    <string name="alarm_one" translatable="false">Sound 1</string>
    <string name="alarm_two" translatable="false">Sound 2</string>
    <string name="alarm_three" translatable="false">Sound 3</string>
    <string name="alarm_four" translatable="false">Sound 4</string>
    <string name="alarm_five" translatable="false">Sound 5</string>
    <string name="alarm_six" translatable="false">Sound 6</string>
    <string name="alarm_seven" translatable="false">Sound 7</string>
    <string name="alarm_eight" translatable="false">Sound 8</string>
    <string name="alarm_nine" translatable="false">Sound 9</string>
    <string name="apply_changes" translatable="false">Apply Changes</string>
    <string name="permission_required">Permission Required</string>
    <string name="this_app_needs_permission_to_use_this_feature_you_can_grant_them_in_app_settings">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="app_settings">App Settings</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="touch_sound">Touch Sound</string>
    <string name="sound_every_tap">Sound Every Tap</string>
    <string name="title_activity_tabbed_main" translatable="false">TabbedMainActivity</string>
    <string name="welcome">Welcome!</string>
    <string name="explore_the_app_and_enjoy">Explore the app and enjoy!</string>
    <string name="don_t_touch_nmy_phone_alarms">Don\'t Touch My\nPhone - Alarms</string>
    <string name="open">Open</string>
    <string name="charging_nmode">Charging\nMode</string>
    <string name="don_t_touch_nwallpapers">Don\'t Touch Wallpapers</string>
    <string name="prank_fool_your_nfriends">Prank: Fool Your\nFriends!</string>
    <string name="prank_now">Prank Now</string>
    <string name="frequency">Frequency</string>
    <string name="once">Once</string>
    <string name="loop">Loop</string>
    <string name="tab_sounds">Sounds</string>
    <string name="tab_wallpapers">Wallpapers</string>
    <string name="tab_charging">Charging</string>
    <string name="image_view">description_image_view</string>
    <string name="how_to_use_charge_feature">Tap on “Toggle Button” to active charging alarm sound.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_exit_app_after_activation">Auto Exit App after Activation</string>
    <string name="pick_pocket_mode_text">Pick Pocket Mode</string>
    <string name="_50_off">50% OFF</string>
    <string name="say_goodbye_to_nads_forever">Say goodbye to\nads forever</string>
    <string name="ad_free_experience">Ad-free experience</string>
    <string name="enjoy_the_app_without_interruptions">Enjoy the app without interruptions</string>
    <string name="pay_once_enjoy_forever">Pay once, enjoy forever</string>
    <string name="continue_to_subscribe">Continue</string>
    <string name="_4_99_lifetime">$4.99/ lifetime</string>
    <string name="set_new_pin_code">Set New Pin Code</string>
    <string name="setup_pin">Setup Pin</string>
    <string name="battery_full_ndetection">Battery Full\nDetection</string>
    <string name="pocket_mode_ndetection">Pocket Mode\nDetection</string>
    <string name="unplug_charging_nalert">Unplug Charging\nAlert</string>
    <string name="find_my_phone_nby_clap">Find My Phone\nby Clap</string>
    <string name="whistle_to_nfindphone">Whistle to\nFindPhone</string>
    <string name="get_notified_instantly_when_your_phone_battery_is_fully_charged">Get notified instantly when your phone battery is fully charged</string>
    <string name="enable_battery_full_detection">Enable \'Battery Full Detection\' to receive an alert as soon as your battery is fully charged, ensuring optimal battery health.</string>
    <string name="enable_pocket_mode_detection_to_secure_your_phone_when_it_s_in_your_pocket">Enable Pocket Mode Detection to secure your phone when it\'s in your pocket</string>
    <string name="pocket_mode_detection_triggers_an_alarm_when_someone_touches_or_removes_your_phone_keeping_your_device_secure_until_you_unlock_it">Pocket Mode Detection triggers an alarm when someone touches or removes your phone, keeping your device secure until you unlock it.</string>
    <string name="pocket_detection_mode_is_activited">Pocket Detection Mode is Currently Activated!!</string>
    <string name="onboarding_slide5_title">Clap to Find my phone</string>
    <string name="onboarding_slide5_desc">Simply clap and your phone will ring, helping you locate it instantly!</string>
    <string name="onboarding_slide6_title">Whistle to Find my phone</string>
    <string name="onboarding_slide6_desc">Easily locate your phone by whistling! No more searching—just whistle.</string>
    <string name="onboarding_slide7_title">Alert on full charged</string>
    <string name="onboarding_slide7_desc">Receive an alert when your phone is fully charged, keeping your device safe and battery healthy.</string>
    <string name="enable_clap_detection_to_trigger">Clap Detection mode listens for your claps to locate your phone. Simply clap, and the app will respond with an alarm to help you find it instantly.</string>
    <string name="touch_alert_works_by_monitoring">Touch Alert works by monitoring your phone\'s sensors. Once activated, it detects any unauthorized physical contact with your device.</string>
    <string name="turn_on_touch_alert">Turn on Touch Alert for instant notifications when your phone is touched.</string>
    <string name="lost_your_phone_again">Lost your phone again? Our innovative feature brings it back with just a whistle!</string>
    <string name="just_whistle_and_your_phone_will_respond_with_a_loud_sound_even_if_it_s_on_silent">Just whistle, and your phone will respond with a loud sound, even if it’s on silent.</string>
    <string name="an_alarm_activates_when_the_npower_cable_is_unplugged">Activate Charging Alert to get notified instantly when your phone is unplugged.</string>
    <string name="selected_sound">Selected Sound</string>
    <string name="more_features">More Features</string>
    <string name="tap_to_change_alarm">Tap to change alarm</string>
    <string name="get_instant_alerts_if_your_wi_fi_disconnects">Get instant alerts if your Wi-Fi disconnects, so you can avoid unexpected interruptions.</string>
    <string name="this_feature_monitors_your_wi_fi">This feature monitors your Wi-Fi and instantly alerts you of any disconnects, perfect for those relying on a stable connection for streaming, work, or security.</string>
    <string name="current_alarm">Current Alarm</string>
    <string name="wi_fi_detection">Wi-Fi Detection</string>
    <string name="current_status_on">Current Status : ON</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="aye_you_sure_you_want_to_exit">Aye you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="allow_access">Allow access</string>
    <string name="your_privacy_and_security_are_our_top_priorities">Your privacy and security are our top priorities. We don’t collect or store your data, it\'s only used to alert you to potential security threats and safeguard your device.</string>
    <string name="anti_theft_cannot_monitor_failed_attempts">Anti-Theft cannot monitor failed attempts or capture intruder selfies without admin access, limiting its ability to fully secure your device. For complete protection, please enable admin access.</string>
</resources>