<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".screens.OnboardingActivity">

    <ImageView
        android:id="@+id/image_onboarding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/bording_one"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_onboarding_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_onboarding"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/onboarding_slide1_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_onboarding_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_onboarding_title"
        android:padding="@dimen/_5sdp"
        android:text="@string/onboarding_slide1_desc"
        android:textAlignment="center"
        android:textColor="@color/gray_2"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/text_onboarding_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
